# cgra-systemc

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .travis.yml  CMakeLists.txt  README.md  install_requirements.sh
cmake/Modules/: CompilerWarnings.cmake  FindGsysC.cmake  PreventInSourceBuilds.cmake
demo/: example.pgm  lena.pgm
demo/625ns/: vcgra_only_result_image.pgm
doc/: README.md  cgra-systemc
header/: CommandInterpreter.h  ConfigurationCache.h  DataInCache.h  DataOutCache.h  Demultiplexer.h  General_DeMux.h  General_Mux.h  MMU.h  MU_TB.h  Management_Unit.h  McPatCacheAccessCounter.hpp  Multiplexer.h  ProcessingElement.h  Selector.h  Synchronizer.h  TB_DataInCache.h  TB_DataOutCache.h  TB_MMU.h  TB_VCGRA.h  TestBenchCC.h  TestBenchMUX.h  TestBenchPE_PE.h  TestBenchVC.h  TestBench_PE.h  Testbench_TopLevel.h  Testbench_VcgraPreloaders.hpp  TopLevel.h  TopLevel_PE.h  TopLevel_VcgraPreloaders.hpp  Typedef.h  VCGRA.h  VCGRA_Instance.h  VirtualChannel.h  testbench_vcgra_only.hpp  utils.hpp
mcpat/: CGRA_4x4.xml  full_architecture.xml  vcgra_prefetchers.xml
src/: CMakeLists.txt  CommandInterpreter.cpp  DataOutCache.h  General_DeMux.h  MMU.cpp  MU_TB.cpp  Management_Unit.cpp  Selector.h  TB_DataInCache.cpp  TB_DataOutCache.cpp  TB_MMU.cpp  TB_VCGRA.cpp  TestBenchCC.cpp  TestBenchMUX.cpp  TestBenchPE_PE.cpp  TestBenchVC.cpp  TestBench_PE.cpp  Testbench_TopLevel.cpp  Testbench_VcgraPreloaders.cpp  TopLevel.cpp  TopLevel.h  TopLevel_PE.cpp  TopLevel_VcgraPreloaders.cpp  VCGRA.cpp  VCGRA_Instance.cpp  sc_main.cpp  testbench_vcgra_only.cpp  vcgra_only.cpp  vcgra_prefetchers.cpp
src/TestBenches/: TestBenchCC.h  TestBenchMUX.cpp  TestBenchMUX.h  TestBenchPE_PE.cpp  TestBenchVC.h  TestBench_TopLevel.cpp  TestBench_TopLevel.h  TestBench_VcgraPreloaders.cpp  TestBench_VcgraPreloaders.hpp  TestBench_vcgra_only.cpp  TestBench_vcgra_only.hpp
tracing/: cacheTranslate.txt
