ADD_LIBRARY (
  COMPONENTS OBJECT
  CommandInterpreter.cpp
  Management_Unit.cpp
  MMU.cpp
  VCGRA.cpp
)
TARGET_INCLUDE_DIRECTORIES (
  COMPONENTS
  PUBLIC ${PROJECT_SOURCE_DIR}/header
  PRIVATE ${SYSTEMC_INCLUDE_DIRS}
)
TARGET_COMPILE_FEATURES (COMPONENTS PRIVATE cxx_std_14)
TARGET_LINK_LIBRARIES (COMPONENTS PRIVATE "${SYSTEMC_LIBRARIES}")
IF (MCPAT_ENABLED)
  ADD_COMPILE_DEFINITIONS (MCPAT)
ENDIF (MCPAT_ENABLED)
IF (GSYSC_ENABLED)
    TARGET_INCLUDE_DIRECTORIES (COMPONENTS
        PUBLIC ${GSYSC_INCLUDE_DIR}
        PRIVATE Qt5Widget_INCLUDE_DIR)
    TARGET_LINK_LIBRARIES (COMPONENTS
        PRIVATE ${GSYSC_LIBRARY}
        PRIVATE Qt5::Widgets)
    ADD_COMPILE_DEFINITIONS (GSYSC)
    TARGET_COMPILE_DEFINITIONS(COMPONENTS
        PRIVATE SC_USE_SC_STRING_OLD)
ENDIF(GSYSC_ENABLED)
